# Com3528_individual

./: .gitignore  CMakeLists.txt  config.py  debug_utils.py  face_stack_launcher.py  miro_gpt_chat.py  miro_gpt_launcher.py  miro_tts.py  package.xml  requirements.txt  startup_search_node.py
Personas/: profile_handler.py
Personas/sample_profiles/: Florence_Mensah
emotions/: emotion_extractor.py
face_id/: authentication.py  authentication_node.py  simple_facerec.py
face_id_old/: authentication.py  registration.py  simple_facerec.py
launch/: dual_eye_face_stack.launch  miro_face_id.launch  miro_gpt.launch
msg/: FaceData.msg
profiles/: florence_Mensah.json  george_taylor.json  priya_kaur.json
scripts/: authentication_node.py  face_centering_node.py  face_id_left_eye_node.py  face_id_node.py  face_id_right_eye_node.py  face_track_node.py  miro_conversation_node.py  startup_search_node.py  test_node.py
settings/: config.py  debug_utils.py
src/configuration/: config.py  debug_utils.py
