<?xml version="1.0"?>
<package format="2">
  <name>Com3528_individual</name>
  <version>0.1.0</version>
  <description>ROS package for COM3528 individual project — MiRoGPT Reminiscence Therapist</description>

  <maintainer email="student@todo.todo">Student</maintainer>
  <license>MIT</license>

  <author email="student@todo.todo">Student</author>

  <url type="website">https://github.com/Abz-ibz/Com3528_individual</url>
  <url type="bugtracker">https://github.com/Abz-ibz/Com3528_individual/issues</url>
  <url type="repository">https://github.com/Abz-ibz/Com3528_individual</url>

  <!-- Core build dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Package dependencies -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <!-- Additional tools can insert metadata here -->
  </export>
</package>
